--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -34,6 +34,11 @@
         font-weight: bold;
       }
     }
+    .phoneIcon {
+      color: #ff0000;
+      font-size: 24px; 
+    }
+    
   }
 
   .chatBox {
